<resources>
    <string name="app_name">Boolean Bear</string>
    <string name="app_name_styled">boolean bear</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit profile</string>
    <string name="notifications">Notifications</string>
    <string name="share_amp_about"><![CDATA[Share & About]]></string>
    <string name="invite_friends">Invite friends</string>
    <string name="contact_us">Contact us</string>
    <string name="support">Support</string>
    <string name="sign_out">Sign Out</string>
    <string name="it_s_a_pleasure_to_have_you_with_us">It\'s a pleasure to have you with us.</string>
    <string name="login_or_sign_up">Login or Sign Up</string>
    <string name="login_or_sign_up_to_continue">Login or Sign up to continue</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="continue_">Continue</string>
    <string name="please_enter_the_verification_code_sent_to_your_phone_number">Please enter the verification code sent to your phone number.</string>
    <string name="didn_t_receive">Didn\'t receive?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify">Verify</string>
    <string-array name="array_course_filters">
        <item>Concept learning</item>
        <item>Implementation</item>
        <item>Projects</item>
        <item>Series</item>
        <item>System designs</item>
        <item>Algorithms</item>
        <item>Installation setup</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_there_welcome_aboard">Hello there! Welcome aboard</string>
    <string name="tell_us_more_about_yourselves">Tell us more about yourselves</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email_address">Email address</string>
    <string name="submit">Submit</string>
    <string name="phone_number">Phone number</string>
    <string name="take_me_to_homepage">Take me to homepage</string>
    <string name="online_information">Online Information</string>
    <string name="basic_information">Basic Information</string>
    <string name="provide_details_about_yourself_and_any_other_pertinent_information">Provide details about yourself and any other pertinent information</string>
    <string name="profession">Profession</string>
    <string name="university_name">University name</string>
    <string name="linkedin_username">LinkedIn username</string>
    <string name="github_username">GitHub username</string>
    <string name="your_email_address_has_not_been_verified">Your email address has not been verified</string>
    <string name="your_email_address_has_been_verified">Your email address has been verified</string>
    <string name="save">Save</string>
    <string name="delete_your_account">Delete your account</string>
    <string name="get_in_touch_with_us">Get in touch with us</string>
    <string name="feedback_support"><![CDATA[Feedback & support]]></string>
    <string name="host_boolean_bear_workshops">Host boolean bear workshops</string>
    <string name="collaborate">Collaborate</string>
    <string name="share_feedback">Share feedback</string>
    <string name="rate_us">Rate us</string>
    <string name="contact_support">Contact support</string>
    <string name="your_reviews_will_help_us_improve_our_product_and_make_it_user_friendly_for_more_users">Your reviews will help us improve our product and make it user friendly for more users.</string>
    <string name="share_feedback_dotted">Share feedback…</string>
    <string name="how_was_your_experience">How was your experience?</string>
    <string name="step_1">Step 1</string>
    <string name="tell_us_more">Tell us more</string>
    <string name="select_issue_category">Select issue category.</string>
    <string name="provide_a_title">Provide a title.</string>
    <string name="title">Title</string>
    <string name="describe_the_issue_you_are_facing_as_much_as_possible">Describe the issue you are facing as much as possible.</string>
    <string name="describe_your_issue">Describe your issue…</string>
    <string name="phone_number_has_been_verified">Phone number has been verified</string>
    <string name="step_2">Step 2</string>
    <string name="verify_your_phone_number">Verify your phone number</string>
    <string name="by_verifying_your_phone_number_you_help_us_maintain_a_secure_and_trustworthy_environment_by_preventing_abuse_and_spamming_of_our_support_feature">By verifying your phone number, you help us maintain a secure and trustworthy environment by preventing abuse and spamming of our support feature.</string>
    <string name="we_collect_your_phone_number_so_that_we_can_give_you_a_call_back_to_effectively_resolve_the_issue_you_ve_raised">We collect your phone number so that we can give you a call back to effectively resolve the issue you\'ve raised.</string>
    <string name="your_issue_has_been_submitted">Your issue has been submitted.</string>
    <string name="go_to_homepage">Go to homepage</string>
    <string name="your_phone_number_has_been_verified_and_you_can_now_proceed_to_submit_your_issue">Your phone number has been verified, you can proceed to submit your issue.</string>
    <string name="step_3">Step 3</string>
    <string name="by_verifying_your_phone_number_you_help_us_maintain_a_secure_and_trustworthy_environment_by_preventing_abuse_and_spamming_of_our_platform">By verifying your phone number, you help us maintain a secure and trustworthy environment by preventing abuse and spamming of our platform.</string>
    <string name="this_cannot_be_undone">This cannot be undone</string>
    <string name="are_you_sure_you_want_to_delete_your_account">Are you sure you want to delete your account?</string>
    <string name="cancel">Cancel</string>
    <string name="delete_now">Delete Now</string>
    <string name="your_profile_data_will_no_longer_be_accessible">Your profile data will no longer be accessible.</string>
    <string name="you_will_stop_receiving_personalized_newsletters">You will stop receiving personalized newsletters.</string>
    <string name="confirm_deletion">Confirm Deletion</string>
    <string name="to_confirm_your_action_type_delete">To confirm your action, type \"DELETE\".</string>
    <string name="exo_player_duration_separator">/</string>
    <string name="network_error">Network Error</string>
    <string name="unable_to_connect_to_boolean_bear_there_could_be_a_problem_with_your_network_connection">Unable to connect to boolean bear. There could be a problem with your network connection.</string>
    <string name="retry">Retry</string>
    <string name="share">Share</string>
    <string name="full_description">+ Full Description</string>
    <string name="up_next">Up Next</string>
    <string name="login_to_access_the_videos">Login to access the videos.</string>
    <string name="unlock_the_videos_by_signing_in_now_your_access_awaits_with_a_quick_login">Unlock the videos by signing in now. Your access awaits with a quick login.</string>
    <string name="login_now">Login Now</string>
    <string name="auto">Auto</string>
    <string name="_480p">480p</string>
    <string name="_720p">720p</string>
    <string name="for_better_experience_select_auto">For better experience select - Auto</string>
    <string name="current_quality">Current Quality</string>
    <string name="current_playback_speed">Current playback speed</string>
    <string name="app_update">App Updates</string>
    <string name="app_update_description">Receive notifications about new app updates and exciting features. Stay informed about the latest enhancements, bug fixes, and improvements to enhance your app experience.</string>
    <string name="account_update">Account Updates</string>
    <string name="account_update_description">Stay updated on your account activities and important notifications. Receive alerts for actions such as email verification, account verification, complaint status updates, and other account-related information to ensure a smooth and secure experience.</string>
    <string name="account_alerts">Account Alerts</string>
    <string name="account_alert_description">Receive critical alerts for suspicious account activities and security-related events. Stay informed about unauthorized access attempts, unusual login activity, account deletions, and other security concerns to help safeguard your account.</string>
    <string name="watch_recommendations">Watch Recommendations</string>
    <string name="watch_recommendations_description">Stay ahead in your programming and design journey with personalized recommendations. Get notified about the latest courses, tutorials, and resources tailored to your interests and skill level. Discover new tools, techniques, and insights to enhance your programming skills and UI design expertise.</string>
    <string name="engagements">Engagement</string>
    <string name="engagement_description">Stay engaged and inspired with regular updates and insights. Receive notifications about new challenges and exclusive content to keep your skills sharp and your creativity flowing.</string>
    <string name="we_have_detected_multiple_device_logins_associated_with_your_account_as_a_security_measure_we_are_logging_you_out_from_this_device_if_you_wish_to_continue_using_your_account_on_this_device_please_log_in_again">We have detected multiple device logins associated with your account. As a security measure, we are logging you out from this device. If you wish to continue using your account on this device, please log in again.</string>
    <string name="multiple_device_login_detected">Multiple Device Login Detected</string>
    <string name="dismiss">Dismiss</string>
    <string name="privacy_amp_policy"><![CDATA[Privacy & Policy]]></string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="privacy_amp_terms_of_use"><![CDATA[Privacy & Terms Of Use]]></string>
    <string name="we_could_not_find_anything_under_the_selected_category">We could not find anything under the selected category</string>
    <string name="no_results_found">No results found</string>
    <string name="we_could_not_find_anything_that_matches_your_search_term">We could not find anything that matches your search term</string>
    <string name="search_contents">Search Contents</string>
    <string name="discover_more_topics">Discover More Topics</string>
    <string name="discover_topics">Discover Topics</string>
    <string name="watch_for_free">Watch For Free</string>
    <string name="premium_courses">Premium Courses</string>
    <string name="binge_on_free_contents">Binge on free contents</string>
    <string name="we_could_not_find_anything_under_the_selected_topic">We could not find anything under the selected topic</string>
    <string name="empty_space">\t\t\t\t\t\t\t</string>
    <string name="hash_tags">Hash Tags</string>
    <string name="mentioned_links">Mentioned Links</string>
    <string name="description">Description</string>
    <string name="join_the_waiting_list">Join The Waiting List</string>
    <string name="don_t_miss_out_join_the_queue_and_get_to_know_first">Don\'t miss out, join the queue and get to know first</string>
    <string name="login">Login</string>
    <string name="enter_your_login_credentials">Enter your login credentials</string>
    <string name="password">Password</string>
    <string name="password_should_contain_minimum">Password should contain minimum</string>
    <string name="brand_logo_amp_name"><![CDATA[Brand Logo & Name]]></string>
    <string name="brand_name">Brand Name</string>
    <string name="brand_logo">Brand Logo</string>
    <string name="brand_logo_animation">Brand Logo Animation</string>
</resources>