<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/searchMenu"
        android:icon="@drawable/search_icon"
        android:title="@string/search_contents"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/discoverMenu"
        android:icon="@drawable/discover_icon"
        android:title="@string/discover_topics"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/accountSettingsMenu"
        android:icon="@drawable/hamburger_menu_icon"
        android:title="@string/settings"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom" />

</menu>