<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corner_top_radius_layout_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingHorizontal="22dp"
    android:paddingVertical="22dp">

    <ImageView
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:src="@drawable/multiple_login_detected_icon">

    </ImageView>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:text="@string/multiple_device_login_detected"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:fontFamily="@font/montserrat_medium">

    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/we_have_detected_multiple_device_logins_associated_with_your_account_as_a_security_measure_we_are_logging_you_out_from_this_device_if_you_wish_to_continue_using_your_account_on_this_device_please_log_in_again"
        android:textAlignment="center"
        android:textSize="14sp"
        app:fontFamily="@font/montserrat">

    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dismissButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="@string/dismiss"
        android:textColor="@color/md_theme_onPrimary"
        app:backgroundTint="@color/md_theme_primary"
        app:cornerRadius="4dp">

    </com.google.android.material.button.MaterialButton>

</LinearLayout>