<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="8dp"
    android:background="@drawable/rounded_constraint_layout_background"
    android:orientation="vertical"
    android:paddingHorizontal="22dp"
    android:paddingVertical="22dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="8dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_quality"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:fontFamily="@font/montserrat">

        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/currentQualityValueTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_weight="1"
            tools:text="Auto"
            android:textColor="@color/white_800"
            android:textSize="15sp"
            app:fontFamily="@font/montserrat">

        </com.google.android.material.textview.MaterialTextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:orientation="vertical">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/qualityChipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:selectionRequired="true"
            app:chipSpacingVertical="0dp"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/qualityAutoChip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:checked="true"
                android:elevation="0dp"
                android:text="@string/auto"
                app:checkedIconEnabled="true"
                app:chipBackgroundColor="@color/black_1200"
                app:chipStrokeWidth="0dp"
                app:iconEndPadding="20dp">

            </com.google.android.material.chip.Chip>

            <com.google.android.material.chip.Chip
                android:id="@+id/quality480pChip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:elevation="0dp"
                android:text="@string/_480p"
                app:checkedIconEnabled="true"
                app:chipBackgroundColor="@color/black_1200"
                app:chipStrokeWidth="0dp"
                app:iconEndPadding="20dp">

            </com.google.android.material.chip.Chip>

            <com.google.android.material.chip.Chip
                android:id="@+id/quality720pChip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:elevation="0dp"
                android:text="@string/_720p"
                app:checkedIconEnabled="true"
                app:chipBackgroundColor="@color/black_1200"
                app:chipStrokeWidth="0dp"
                app:iconEndPadding="20dp">

            </com.google.android.material.chip.Chip>
        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/for_better_experience_select_auto"
            android:textColor="@color/white"
            app:fontFamily="@font/montserrat_light">

        </com.google.android.material.textview.MaterialTextView>

    </LinearLayout>

</LinearLayout>