<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_constraint_layout_background"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="22dp"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        tools:context=".ui.fragments.LoginToContinueFragment">

        <ImageView
            android:layout_width="260dp"
            android:layout_height="260dp"
            android:src="@drawable/login_to_continue_icon">

        </ImageView>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_to_access_the_videos"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:fontFamily="@font/montserrat_medium">

        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/unlock_the_videos_by_signing_in_now_your_access_awaits_with_a_quick_login"
            android:textAlignment="center"
            android:textSize="14sp"
            app:fontFamily="@font/montserrat">

        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:text="@string/login_now"
            android:textColor="@color/md_theme_onPrimary"
            app:backgroundTint="@color/md_theme_primary"
            app:cornerRadius="4dp">

        </com.google.android.material.button.MaterialButton>

    </LinearLayout>

</layout>