<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="40dp"
        android:paddingBottom="20dp"
        android:scrollbarSize="0dp"
        android:scrollbars="vertical"
        tools:context=".ui.fragments.DescribeIssueFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:paddingHorizontal="24dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/step1LabelTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/step_1"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </com.google.android.material.textview.MaterialTextView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tellUsMoreLabelTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/tell_us_more"
                android:textColor="@color/violet_800"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/step1LabelTextView">

            </com.google.android.material.textview.MaterialTextView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/selectIssueCategoryLabelTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/select_issue_category"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tellUsMoreLabelTextView" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/selectIssueCategoryInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/montserrat"
                android:textColorHint="@color/white"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:endIconTint="@color/white"
                app:expandedHintEnabled="false"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/selectIssueCategoryLabelTextView">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/selectIssueCategoryAutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/montserrat"
                    android:inputType="none">

                </com.google.android.material.textfield.MaterialAutoCompleteTextView>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/issueTitleLabelTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/provide_a_title"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/selectIssueCategoryInputLayout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/issueTitleInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/montserrat"
                android:hint="@string/title"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:endIconTint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/issueTitleLabelTextView">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/issueTitleInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/issueDescriptionLabelTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/describe_the_issue_you_are_facing_as_much_as_possible"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/issueTitleInputLayout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/issueDescriptionInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/montserrat"
                android:hint="@string/describe_your_issue"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:endIconTint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/issueDescriptionLabelTextView">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/issueDescriptionInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textMultiLine"
                    android:lines="8">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/continueButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/continue_"
                app:cornerRadius="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/issueDescriptionInputLayout">

            </com.google.android.material.button.MaterialButton>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>